Fixed navigation bug and layout bug

--- a/style.css
+++ b/style.css
@@ -416,7 +416,8 @@ footer
 
 .post-heading
 {
-    width: 90%;
+    width: 100%;
+    margin-top: 0;
     color: white;
     font-size: 3rem;
     text-align: center;
